--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Hong Kong Restaurant Dynamics • Interactive (High-Contrast)</title>
+<title>Hong Kong Restaurant Dynamics • Interactive (Year Dropdowns)</title>
 <link rel="preconnect" href="https://cdn.jsdelivr.net">
 <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
 <script src="https://cdn.plot.ly/plotly-2.35.2.min.js"></script>
@@ -24,7 +24,7 @@ h1{font-size:22px;margin:0}
 .grid{display:grid;gap:12px}
 @media(min-width:980px){.grid{grid-template-columns:300px 1fr}}
 label{display:block;color:var(--muted);font-size:13px;margin:8px 0 4px}
-select, input[type="number"], input[type="text"]{
+select, input[type="text"]{
   width:100%;background:#0a0f1a;border:1px solid var(--border);color:var(--ink);
   padding:8px 10px;border-radius:10px;outline:none;
 }
@@ -54,7 +54,7 @@ tbody tr:nth-child(odd){background:rgba(255,255,255,.02)}
 <div class="container">
   <header>
     <h1>Hong Kong Restaurant Dynamics • Interactive (2016–2025)</h1>
-    <span class="badge">High-contrast theme • Plotly + PapaParse</span>
+    <span class="badge">Year dropdowns • High-contrast</span>
   </header>
 
   <div class="grid">
@@ -67,14 +67,39 @@ tbody tr:nth-child(odd){background:rgba(255,255,255,.02)}
       <small class="help">Place CSVs in this folder: <code>year_cuisine_counts_wide.csv</code>, <code>yearly_totals_summary.csv</code>.</small>
 
       <hr/>
-      <label>Years</label>
-      <div class="row">
-        <input id="yearStart" type="number" placeholder="Start" />
-        <input id="yearEnd" type="number" placeholder="End" />
-      </div>
+      <label>Base year</label>
+      <select id="yearStart">
+        <option value="2016">2016</option>
+<option value="2017">2017</option>
+<option value="2018">2018</option>
+<option value="2019">2019</option>
+<option value="2020">2020</option>
+<option value="2021">2021</option>
+<option value="2022">2022</option>
+<option value="2023">2023</option>
+<option value="2024">2024</option>
+<option value="2025">2025</option>
+      </select>
+
+      <label>Last year</label>
+      <select id="yearEnd">
+        <option value="2016">2016</option>
+<option value="2017">2017</option>
+<option value="2018">2018</option>
+<option value="2019">2019</option>
+<option value="2020">2020</option>
+<option value="2021">2021</option>
+<option value="2022">2022</option>
+<option value="2023">2023</option>
+<option value="2024">2024</option>
+<option value="2025">2025</option>
+      </select>
+      <small class="help">Year range is constrained to 2016–2025. Last year will not be earlier than base year.</small>
 
       <label>Top N cuisines (used when none picked)</label>
-      <input id="topN" type="number" min="1" max="24" value="8" />
+      <select id="topN">
+        <option value="1">1</option><option value="2">2</option><option value="3">3</option><option value="4">4</option><option value="5">5</option><option value="6">6</option><option value="7">7</option><option value="8">8</option><option value="9">9</option><option value="10">10</option><option value="11">11</option><option value="12">12</option><option value="13">13</option><option value="14">14</option><option value="15">15</option><option value="16">16</option><option value="17">17</option><option value="18">18</option><option value="19">19</option><option value="20">20</option><option value="21">21</option><option value="22">22</option><option value="23">23</option><option value="24">24</option>
+      </select>
 
       <label>Pick cuisines (optional)</label>
       <div class="toolbar">
@@ -117,21 +142,22 @@ tbody tr:nth-child(odd){background:rgba(255,255,255,.02)}
   </div>
 
   <footer>
-    <p class="smallnote">This app uses a high-contrast palette and thicker axes for classroom visibility. Host on GitHub Pages; CSVs are read from <code>./data/</code>.</p>
+    <p class="smallnote">This app uses fixed dropdowns for years (2016–2025) and high-contrast charts for classroom visibility.</p>
   </footer>
 </div>
 
 <script>
-// High-contrast colorway
+// High-contrast style (same as previous contrast version)
 const COLORWAY = [
   '#60a5fa','#22c55e','#f43f5e','#f59e0b','#a855f7','#06b6d4','#f472b6','#94a3b8',
   '#16a34a','#fb7185','#fcd34d','#8b5cf6'
 ];
-
 const AXIS_LINE = {showline:true, linewidth:1.6, linecolor:'rgba(255,255,255,.75)'};
 const GRID_COLOR = 'rgba(255,255,255,.18)';
 const TICK_FONT = {color:'#f6f9ff', size:13};
 const TITLE_FONT = {color:'#f6f9ff', size:16};
+
+const FIXED_YEARS = Array.from({length: 10}, (_,i)=>2016+i); // 2016..2025
 
 const state = {
   dataFolder:'./data/',
@@ -152,11 +178,13 @@ async function loadData(){
   state.totals = totals;
   state.years = wide.map(r => +r['__Year']);
   state.cuisines = Object.keys(wide[0]).filter(k => k !== '__Year');
-  // UI defaults
-  document.getElementById('yearStart').value = Math.min(...state.years);
-  document.getElementById('yearEnd').value = Math.max(...state.years);
+
+  // defaults for dropdowns
+  document.getElementById('yearStart').value = 2016;
+  document.getElementById('yearEnd').value = 2025;
   const defaultTopN = Math.min(8, state.cuisines.length);
-  document.getElementById('topN').value = defaultTopN;
+  document.getElementById('topN').value = String(defaultTopN);
+
   renderCuisineList(state.cuisines);
   renderSingleCuisine(state.cuisines);
   render();
@@ -176,7 +204,7 @@ function renderCuisineList(list){
   const wrap = document.getElementById('cuisineList');
   wrap.innerHTML = '';
   list.forEach(c => {
-    const id = 'c_' + c.replace(/\\W+/g,'_');
+    const id = 'c_' + c.replace(/\W+/g,'_');
     const div = document.createElement('div');
     div.innerHTML = `<label><input type="checkbox" value="${c}" id="${id}"><span>${c}</span></label>`;
     wrap.appendChild(div);
@@ -192,11 +220,27 @@ function renderSingleCuisine(list){
   });
 }
 
+// dropdown validation: ensure start <= end
+const ysSel = document.getElementById('yearStart');
+const yeSel = document.getElementById('yearEnd');
+ysSel.addEventListener('change', ()=>{
+  const s = parseInt(ysSel.value,10);
+  let e = parseInt(yeSel.value,10);
+  if(e < s) yeSel.value = String(s);
+});
+yeSel.addEventListener('change', ()=>{
+  const s = parseInt(ysSel.value,10);
+  let e = parseInt(yeSel.value,10);
+  if(e < s) ysSel.value = String(e);
+});
+
 function getFiltered(){
-  const ys = [+document.getElementById('yearStart').value, +document.getElementById('yearEnd').value];
-  const topN = +document.getElementById('topN').value || 8;
+  const s = parseInt(document.getElementById('yearStart').value,10);
+  const e = parseInt(document.getElementById('yearEnd').value,10);
+  const topN = parseInt(document.getElementById('topN').value,10) || 8;
   const picked = Array.from(document.querySelectorAll('#cuisineList input:checked')).map(i=>i.value);
-  const rows = state.ycWide.filter(r => r['__Year'] >= ys[0] && r['__Year'] <= ys[1]);
+
+  const rows = state.ycWide.filter(r => r['__Year'] >= s && r['__Year'] <= e);
   const cuisines = state.cuisines.slice();
   let use;
   if (picked.length){
@@ -215,7 +259,7 @@ function lineTotal(){
   const data = [{ x: years, y: vals, mode:'lines+markers', name:'Total restaurants', line:{width:3}, marker:{size:7} }];
   const layout = baseLayoutTime('Total restaurants by year');
   Plotly.newPlot('chart', data, layout, {displayModeBar:true});
-  setCaption('Total restaurants by year. High-contrast axes and thicker lines for visibility.');
+  setCaption('Total restaurants by year. Use the Base/Last year dropdowns to focus on a period.');
 }
 
 function cuisineLine(){
@@ -226,7 +270,7 @@ function cuisineLine(){
   const layout = baseLayoutTime(`Cuisine line: ${sel}`);
   layout.yaxis.title = 'Count';
   Plotly.newPlot('chart', data, layout, {displayModeBar:true});
-  setCaption('Single-cuisine time series with thicker stroke and brighter colors.');
+  setCaption('Single-cuisine time series with fixed base/last year selection on the left.');
 }
 
 function netChange(){
@@ -242,18 +286,12 @@ function netChange(){
   }
   const items = finalUse.map(c => ({ c, v: (+last[c]||0) - (+first[c]||0) }));
   items.sort((a,b)=> b.v - a.v);
-  const data = [{
-    type:'bar',
-    x: items.map(i=>i.c),
-    y: items.map(i=>i.v),
-    text: items.map(i=> String(i.v)),
-    textposition:'outside',
-    cliponaxis:false,
-    marker:{line:{color:'rgba(255,255,255,.45)', width:1}}
-  }];
+  const data = [{ type:'bar', x: items.map(i=>i.c), y: items.map(i=>i.v),
+    text: items.map(i=> String(i.v)), textposition:'outside', cliponaxis:false,
+    marker:{line:{color:'rgba(255,255,255,.45)', width:1}} }];
   const layout = baseLayoutCat('Net change (first→last in range)');
   Plotly.newPlot('chart', data, layout, {displayModeBar:true});
-  setCaption('Net change equals last minus first within the selected years. Category axis, bright bars, and value labels for readability.');
+  setCaption('Net change within the Base→Last year window. Bars are sorted by change; auto-fills to Top N when few cuisines are picked.');
 }
 
 function indexedGrowth(){
@@ -267,7 +305,7 @@ function indexedGrowth(){
   const layout = baseLayoutTime(`Indexed growth by cuisine (base=${years[0]}=100)`);
   layout.yaxis.title = 'Index';
   Plotly.newPlot('chart', data, layout, {displayModeBar:true});
-  setCaption('Relative growth with base-year = 100. Thicker strokes and clear ticks.');
+  setCaption('Relative growth with base-year = 100. Use dropdowns to change the comparison window.');
 }
 
 function yoy(){
@@ -279,22 +317,19 @@ function yoy(){
   const layout = baseLayoutTime('YoY net additions by cuisine');
   layout.yaxis.zeroline = true;
   Plotly.newPlot('chart', data, layout, {displayModeBar:true});
-  setCaption('Annual momentum (above zero = expansion; below zero = contraction).');
+  setCaption('Annual momentum (above zero = expansion; below zero = contraction). Window controlled by the year dropdowns.');
 }
 
 function share(){
   const {rows, use, years} = getFiltered();
   const data = use.map(c => {
-    const y = rows.map(r => {
-      const s = sumCuisine(r);
-      return s? (+r[c])/s : 0;
-    });
+    const y = rows.map(r => { const s = sumCuisine(r); return s? (+r[c])/s : 0; });
     return { x: years, y, mode:'lines+markers', name:c, line:{width:3}, marker:{size:7} };
   });
   const layout = baseLayoutTime('Cuisine share trajectories');
   layout.yaxis.tickformat = ',.0%';
   Plotly.newPlot('chart', data, layout, {displayModeBar:true});
-  setCaption('Percentage shares across time. Good for structural shifts.');
+  setCaption('Percentage shares across time in the selected window (Base→Last year).');
 }
 
 function diversity(){
@@ -305,8 +340,7 @@ function diversity(){
   rows.forEach(r => {
     const s = sumCuisine(r);
     const ps = Object.keys(r).filter(k=>k!=='__Year').map(k => s? (+r[k])/s:0);
-    H.push(entropy(ps));
-    EN.push(1/ hhi(ps));
+    H.push(entropy(ps)); EN.push(1/ hhi(ps));
   });
   const data=[
     { x: years, y:H, name:'Shannon entropy', mode:'lines+markers', yaxis:'y1', line:{width:3}, marker:{size:7} },
@@ -316,7 +350,7 @@ function diversity(){
   layout.yaxis.title='H';
   layout.yaxis2={ title:'1/HHI', overlaying:'y', side:'right', tickfont:TICK_FONT, showline:true, linecolor:AXIS_LINE.linecolor, linewidth:AXIS_LINE.linewidth, gridcolor:GRID_COLOR };
   Plotly.newPlot('chart', data, layout, {displayModeBar:true});
-  setCaption('Two diversity lenses: Shannon entropy and effective number of cuisines (1/HHI).');
+  setCaption('Diversity metrics for the selected Base→Last window.');
 }
 
 function renderTable(){
@@ -332,7 +366,8 @@ function renderTable(){
         const prev = (+rows[i-1][c]||0);
         const pct = prev? (((val-prev)/prev*100).toFixed(1))+'%' : 'n/a';
         const sign = (prev && (val-prev)>=0) ? '+' : '';
-        tr += `<td>${val} (${sign}${pct})</td>`;
+        tr += `<td>${val} (${
+sign}${pct})</td>`;
       }
     });
     html += `<tr>${tr}</tr>`;
@@ -341,7 +376,7 @@ function renderTable(){
   document.getElementById('tableWrap').innerHTML = html;
   document.getElementById('chart').style.display='none';
   document.getElementById('tableWrap').style.display='block';
-  setCaption('Table with YoY % in parentheses. Use Export → Download filtered CSV to save the current slice.');
+  setCaption('Table with YoY % in parentheses for the selected Base→Last window.');
 }
 
 function baseLayoutTime(title){
@@ -412,10 +447,9 @@ document.getElementById('loadBtn').addEventListener('click', ()=>{
 document.getElementById('applyFilter').addEventListener('click', render);
 document.getElementById('resetFilter').addEventListener('click', ()=>{
   document.querySelectorAll('#cuisineList input:checked').forEach(i=> i.checked=false);
-  const defaultTopN = Math.min(8, state.cuisines.length);
-  document.getElementById('topN').value = defaultTopN;
-  document.getElementById('yearStart').value = Math.min(...state.years);
-  document.getElementById('yearEnd').value = Math.max(...state.years);
+  document.getElementById('topN').value = '8';
+  document.getElementById('yearStart').value = '2016';
+  document.getElementById('yearEnd').value = '2025';
   document.getElementById('singleCuisine').selectedIndex = 0;
   render();
 });
@@ -450,7 +484,7 @@ document.getElementById('dlCSV').addEventListener('click', ()=>{
   rows.forEach(r=>{
     lines.push([r['__Year']].concat(use.map(c=> r[c])).join(','));
   });
-  const blob = new Blob([lines.join('\\n')], {type:'text/csv;charset=utf-8;'});
+  const blob = new Blob([lines.join('\n')], {type:'text/csv;charset=utf-8;'});
   const url = URL.createObjectURL(blob);
   const a = document.createElement('a'); a.href = url; a.download = 'filtered_data.csv'; a.click();
   setTimeout(()=>URL.revokeObjectURL(url), 1000);
